syntax = "proto3";

package llm_benchmark.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// UserService provides operations for user management and authentication
service UserService {
  // Register a new user account
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Login and obtain authentication token
  rpc Login(LoginRequest) returns (LoginResponse);

  // Get user profile
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  // Update user profile
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

// User roles
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ANONYMOUS = 1;
  USER_ROLE_REGISTERED = 2;
  USER_ROLE_CONTRIBUTOR = 3;
  USER_ROLE_REVIEWER = 4;
  USER_ROLE_ADMIN = 5;
}

// Organization types
enum OrganizationType {
  ORGANIZATION_TYPE_UNSPECIFIED = 0;
  ORGANIZATION_TYPE_LLM_PROVIDER = 1;
  ORGANIZATION_TYPE_RESEARCH_INSTITUTION = 2;
  ORGANIZATION_TYPE_ENTERPRISE = 3;
  ORGANIZATION_TYPE_OPEN_SOURCE = 4;
  ORGANIZATION_TYPE_INDIVIDUAL = 5;
}

// Organization role
enum OrganizationRole {
  ORGANIZATION_ROLE_UNSPECIFIED = 0;
  ORGANIZATION_ROLE_MEMBER = 1;
  ORGANIZATION_ROLE_ADMIN = 2;
  ORGANIZATION_ROLE_OWNER = 3;
}

// User profile
message UserProfile {
  google.protobuf.StringValue bio = 1;
  google.protobuf.StringValue affiliation = 2;
  google.protobuf.StringValue website = 3;
  google.protobuf.StringValue github_username = 4;
  google.protobuf.StringValue orcid = 5;
  google.protobuf.StringValue public_email = 6;
}

// Organization membership
message OrganizationMembership {
  string organization_id = 1;
  string organization_name = 2;
  OrganizationRole role = 3;
  google.protobuf.Timestamp joined_at = 4;
}

// User
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  google.protobuf.StringValue display_name = 4;
  UserRole role = 5;
  repeated OrganizationMembership organizations = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp last_active_at = 8;
  bool email_verified = 9;
  UserProfile profile = 10;
}

// Organization
message Organization {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue website = 5;
  google.protobuf.StringValue logo_url = 6;
  OrganizationType organization_type = 7;
  bool verified = 8;
  google.protobuf.Timestamp verification_date = 9;
  google.protobuf.Timestamp created_at = 10;
}

// Register request
message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  google.protobuf.StringValue display_name = 4;
}

// Register response
message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Login request
message LoginRequest {
  string email_or_username = 1;
  string password = 2;
}

// Login response
message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// Get profile request
message GetProfileRequest {
  google.protobuf.StringValue user_id = 1;
}

// Get profile response
message GetProfileResponse {
  User user = 1;
}

// Update profile request
message UpdateProfileRequest {
  google.protobuf.StringValue display_name = 1;
  UserProfile profile = 2;
}

// Update profile response
message UpdateProfileResponse {
  User user = 1;
}
